--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "I'm a fourth year undergraduate student from XJTU"
   location         : "Singarpor"
-  employer         : "Red Brick University"
+  employer         : "XJTU -> NTU"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "976158658@qq.com" 
 
   # Academic websites
   academia         : # URL
